# shiny-palm-tree

./: .gitignore  CMakeLists.txt  README.md
docs/: UIDataBinding.md  UILabel.md  UILayouts.md  UIProgressBar.md  UISceneManager.md  UITextInput.md  UITheme.md
examples/: label_example.cpp  progressbar_example.cpp  theme_console_demo.cpp
examples/coordinate_testing/: comprehensive_coordinate_test.cpp  coordinate_accuracy_test.cpp
examples/debug_tools/: README.md  middle_click_test.cpp  mouse_wheel_zoom_test.cpp  visual_coordinate_debugger.cpp
examples/hexgrid_examples/: enhanced_hex_example.cpp  hex_grid_example.cpp
examples/theme_examples/: README.md  theme_example.cpp  theme_integration_example.cpp  visual_theme_integration_example.cpp
examples/ui_components/: README.md  databinding_example.cpp  layout_examples.cpp  phase4a_migration_example.cpp  progressbar_example.cpp  scene_example.cpp  textinput_example.cpp
include/: CommonConstants.h  Constants.h  UIConstants.h  utils.h
include/Interface/ui/: CardDisplayData.h  ContainerCompat.h  FocusableButton.h  FocusableButtonTestWindow.h  HexCoordinate.h  HexGrid.h  HexGridEditor.h  HexGridRenderer.h  HexTile.h  Layout.h  SimpleContainer.h  TechNode.h  TechTree.h  TechTreeUI.h  TooltipData.h  UIButton.h  UICard.h  UIComponent.h  UIContainer.h  UIDataBinding.h  UILabel.h  UILayoutContainer.h  UIManager.h  UIProgressBar.h  UISceneManager.h  UITextInput.h  UITheme.h  UIThemeManager.h  UITooltip.h
include/Systems/: SDLManager.h
script/: testing_focusable_button.sh  testing_hexagon_alignment_test.sh
src/Interface/ui/: FocusableButton.cpp  FocusableButtonTestWindow.cpp  HexCoordinate.cpp  HexGrid.cpp  HexGridEditor.cpp  HexGridRenderer.cpp  HexTile.cpp  Layout.cpp  SimpleContainer.cpp  TechNode.cpp  TechTree.cpp  TechTreeUI.cpp  UIButton.cpp  UICard.cpp  UIComponent.cpp  UIContainer.cpp  UIDataBinding.cpp  UILabel.cpp  UILayoutContainer.cpp  UIManager.cpp  UIProgressBar.cpp  UISceneManager.cpp  UITextInput.cpp  UITheme.cpp  UIThemeManager.cpp  UITooltip.cpp
src/Systems/: SDLManager.cpp
testing/: testing_focusable_button.cpp  testing_hexagon_alignment_test.cpp
tests/: main.cpp  test_forward_compatibility.cpp  test_function_layout.cpp  test_simple_container.cpp  test_ui_container.cpp  test_ui_focus.cpp  test_ui_integration.cpp  test_ui_label.cpp  test_ui_layout.cpp  test_ui_layouts.cpp  test_ui_manager.cpp  test_ui_progressbar.cpp  test_ui_scenemanager.cpp  test_ui_textinput.cpp  test_ui_theme.cpp
